fixed layout of hero-left

--- a/index.html
+++ b/index.html
@@ -3,18 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SE-FlEX-CLONE</title>
+    <link rel="stylesheet" href="src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>SE-FLEX-CLONE</title>
   </head>
   <body>
     <main>
-      <section id="Hero">
+      <section id="hero">
         <div class="navbar"></div>
         <div class="hero-content">
           <div class="hero-left">
-            <span>WANT TO BECOME A</span
-            ><span class="hero-animated-text"></span>
+            <img src="./src/images/hero-left.png" class="hero-left-img"></img>
+            <div class="content-wrapper">
+              <span>WANT TO BECOME A</span>
+              <div class="hero-animated-text">
+                <span>SOFTWARE ENGINEER?</span>
+                <span>_</span>
+              </div>
+              <p class="hero-description">
+                Jumpstart your journey in tech with our courses in Computer
+                Science, Full-Stack Web development, Data Engineering and UI/UX
+                Design. Get hands-on experience and gain essential skills for a
+                successful tech career.
+              </p>
+              <button>#GET TRAINED</button>
+            </div>
           </div>
-          <div class="hero-right"></div>
+          <div class="hero-right">
+            <div class="content-wrapper">
+              <span>WANT TO BECOME A</span>
+              <div>
+                <span class="hero-animated-text">SOFTWARE ENGINEER?</span>
+                <span>_</span>
+              </div>
+              <p class="hero-description">
+                Jumpstart your journey in tech with our courses in Computer
+                Science, Full-Stack Web development, Data Engineering and UI/UX
+                Design. Get hands-on experience and gain essential skills for a
+                successful tech career.
+              </p>
+              <button>#GET TRAINED</button>
+            </div>
+          </div>
         </div>
       </section>
       <section></section>
