started with Milestones section

--- a/index.html
+++ b/index.html
@@ -81,8 +81,41 @@
             <div></div>
           </div>
         </div>
+        <div class="yt-video">
+          <iframe
+            src="https://www.youtube.com/embed/vG7SYQjODTs"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
       </section>
-      <section></section>
+      <section id="milestones">
+        <div class="section-header">
+          <div class="section-title">
+            <span class="section-marker">></span>
+            <span class="section-description">Milestones</span>
+          </div>
+          <div class="section-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="milestones-container">
+          <div class="employment">
+            <span> 90%</span>
+            <span>employment success rate</span>
+            <ul class="employment-list">
+              <li>- Supported the employment of <b>250+</b>youth</li>
+              <li>- <b>50%</b> working remotely from Lebanon</li>
+              <li>- Average salary today <b>$1,300</b></li>
+            </ul>
+          </div>
+          <div></div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
