finished up milestones sections, started with Programs sections

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="milestones-container">
-          <div class="employment">
+          <div class="milestones-left employment">
             <span> 90%</span>
             <span>employment success rate</span>
             <ul class="employment-list">
@@ -113,10 +113,58 @@
               <li>- Average salary today <b>$1,300</b></li>
             </ul>
           </div>
-          <div></div>
+          <div class="milestones-right">
+            <div class="milestones-top-right">
+              <div>
+                <span class="milestones-right-title">1,000+</span>
+                <span class="milestones-right-info"
+                  >youth trained since 2016</span
+                >
+              </div>
+              <div>
+                <span class="milestones-right-title">10+</span>
+                <span class="milestones-right-info">hiring countries</span>
+              </div>
+            </div>
+            <div class="milestones-bottom-right">
+              <div>
+                <span class="milestones-right-title">300+</span>
+                <span class="milestones-right-info"
+                  >graduated Full-Stack<br />web developers
+                </span>
+              </div>
+              <div>
+                <span class="milestones-right-title">220+</span>
+                <span class="milestones-right-info"
+                  >global recruitment<br />
+                  partner companies</span
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-      <section></section>
+      <section id="programs">
+        <div class="section-header">
+          <div class="section-title">
+            <span class="section-marker">></span>
+            <span class="section-description">Programs</span>
+          </div>
+          <div class="section-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="programs-content">
+          <div>
+            <button>FCS</button>
+            <button>FSW</button>
+            <button>FSD</button>
+            <button>UIX</button>
+          </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
