--- a/index.html
+++ b/index.html
@@ -157,11 +157,59 @@
           </div>
         </div>
         <div class="programs-content">
-          <div>
+          <div class="programs-buttons">
             <button>FCS</button>
-            <button>FSW</button>
+            <button>
+              <div>FSW</div>
+            </button>
             <button>FSD</button>
             <button>UIX</button>
+            <div id="fcs">
+              <div>
+                <div>
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </div>
+            <div id="fsw">
+              <div class="fsw-content">
+                <div class="fsw-header">
+                  <span>> FSW:</span>
+                  <span>Full-Stack Web Development</span>
+                </div>
+                <p class="fsw-info">
+                  // Our 14-week bootcamp is designed to equip aspiring
+                  developers with the technical and interpersonal skills needed
+                  to become professional software engineers. Participants will
+                  learn essential concepts such as Version Control,
+                  Object-Oriented Programming, Database Management Systems, MVC
+                  Design Patterns, Dependency Management, modern Web Frameworks,
+                  and AWS. The program also includes a soft-skills curriculum
+                  covering Communication & Interpersonal Skills, Professional
+                  Writing, Technical Presentations, Negotiation, and
+                  Interviewing, which will be taught through lectures, weekly
+                  projects, tech talks, and a final project to showcase their
+                  learning.
+                </p>
+              </div>
+            </div>
+            <div id="fsd">
+              <div>
+                <div>
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </div>
+            <div id="uix">
+              <div>
+                <div>
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
