fsw section in programs

--- a/index.html
+++ b/index.html
@@ -159,25 +159,28 @@
         <div class="programs-content">
           <div class="programs-buttons">
             <button>FCS</button>
-            <button>
+            <button autofocus>
               <div>FSW</div>
             </button>
             <button>FSD</button>
             <button>UIX</button>
-            <div id="fcs">
+          </div>
+          <div id="fcs">
+            <div>
               <div>
-                <div>
-                  <span></span>
-                  <span></span>
-                </div>
+                <span></span>
+                <span></span>
               </div>
             </div>
-            <div id="fsw">
-              <div class="fsw-content">
-                <div class="fsw-header">
-                  <span>> FSW:</span>
-                  <span>Full-Stack Web Development</span>
-                </div>
+          </div>
+          <div id="fsw">
+            <div class="fsw-content">
+              <div class="fsw-header">
+                <span>> FSW:</span>
+                <span>Full-Stack Web Development</span>
+              </div>
+
+              <div>
                 <p class="fsw-info">
                   // Our 14-week bootcamp is designed to equip aspiring
                   developers with the technical and interpersonal skills needed
@@ -192,7 +195,19 @@
                   projects, tech talks, and a final project to showcase their
                   learning.
                 </p>
+                <div class="fsw-footer">
+                  <div class="fsw-date">
+                    <span>next bootcamp date |</span>
+                    <span>26 JUN 2023</span>
+                  </div>
+                  <div>
+                    <a href="https://www.sefactory.io/fsw">
+                      <button>Learn More ></button>
+                    </a>
+                  </div>
+                </div>
               </div>
+              <div></div>
             </div>
             <div id="fsd">
               <div>
