--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -165,22 +165,14 @@
             <button>FSD</button>
             <button>UIX</button>
           </div>
-          <div id="fcs">
-            <div>
-              <div>
-                <span></span>
-                <span></span>
-              </div>
-            </div>
-          </div>
           <div id="fsw">
             <div class="fsw-content">
-              <div class="fsw-header">
-                <span>> FSW:</span>
-                <span>Full-Stack Web Development</span>
-              </div>
+              <div class="fsw-left">
+                <div class="fsw-header">
+                  <span>> FSW:</span>
+                  <span>Full-Stack Web Development</span>
+                </div>
 
-              <div>
                 <p class="fsw-info">
                   // Our 14-week bootcamp is designed to equip aspiring
                   developers with the technical and interpersonal skills needed
@@ -207,28 +199,61 @@
                   </div>
                 </div>
               </div>
-              <div></div>
-            </div>
-            <div id="fsd">
-              <div>
-                <div>
-                  <span></span>
-                  <span></span>
-                </div>
-              </div>
-            </div>
-            <div id="uix">
-              <div>
-                <div>
-                  <span></span>
-                  <span></span>
-                </div>
-              </div>
+              <img src="src/images/fsw.png" alt="fsw presentation" />
             </div>
           </div>
         </div>
       </section>
-      <section></section>
+      <section id="hire-talent">
+        <div class="section-header">
+          <div class="section-title">
+            <span class="section-marker">></span>
+            <span class="section-description">Hire talent</span>
+          </div>
+          <div class="section-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="hire-content">
+          <div class="hire-top">
+            <span>Become a Recruitment Partner</span>
+            <div class="hire-join">
+              <span>220+</span> companies from over <span>10</span> countries
+              have joined our network since <span>2016</span>
+            </div>
+            <div>
+              <ol>
+                <li>
+                  Exclusive, direct, and streamlined access to our graduating
+                  cycles
+                </li>
+                <li>
+                  Candidate insights from instructors and personalized
+                  recommendations
+                </li>
+                <li>Interviews at will</li>
+                <li>
+                  Tech talks participation and engagement with students
+                  opportunities
+                </li>
+              </ol>
+
+              <p>
+                Are you on the hunt for exceptional rising junior developers?
+                Look no further than SE Factory!
+              </p>
+            </div>
+            <a href="#">CONTACT US ></a>
+          </div>
+          <div class="hire-bottom">
+            <span>Want to launch a local team?</span>
+            <span> check out </span>
+            <img src="src/images/hr-factory.svg" alt="HR Factory" />
+          </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
