added testimials section, and added some utility classes

--- a/index.html
+++ b/index.html
@@ -254,7 +254,56 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <section id="testimonials">
+        <div class="section-header">
+          <div class="section-title">
+            <span class="section-marker">></span>
+            <span class="section-description">Testimonials</span>
+          </div>
+          <div class="section-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="testimonials-content">
+          <div class="testimonials-info">
+            <div class="quote-wrapper flex flex-col">
+              <div>
+                <img
+                  src="src/images/quote.svg"
+                  width="64px"
+                  height="59px"
+                  alt="Quote"
+                />
+                <p>
+                  Growing up, I saw that every girl that had taken interest in
+                  anything technical or scientific had been undermined and
+                  underestimated in her field. That isn't fair, breaking this
+                  stereotype is a must. The first step I took towards doing this
+                  was to join SEF, a bootcamp that supported diversity and
+                  inclusion.
+                </p>
+              </div>
+              <div class="profile">
+                <img src="src/images/zeina.png" width="50px" height="50px" />
+                <div>
+                  <span>Zeina O.</span>
+                  <div>
+                    > SEF alumna working at
+                    <span class="text-green weight-900">Poyesis</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <img src="src/images/zeina.png" alt="Zeina" />
+        </div>
+        <div>
+          <span class="round"></span><span class="round"></span
+          ><span class="round"></span><span class="round"></span>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
