finished carousel indicators in testimonials section

--- a/index.html
+++ b/index.html
@@ -299,9 +299,11 @@
           </div>
           <img src="src/images/zeina.png" alt="Zeina" />
         </div>
-        <div>
-          <span class="round"></span><span class="round"></span
-          ><span class="round"></span><span class="round"></span>
+        <div class="carousel-indicators flex">
+          <span class="round bg-dark-grey"></span>
+          <span class="round bg-light-grey"> </span>
+          <span class="round bg-light-grey"></span>
+          <span class="round bg-light-grey"></span>
         </div>
       </section>
       <section></section>
