started with faq section

--- a/index.html
+++ b/index.html
@@ -306,7 +306,28 @@
           <span class="round bg-light-grey"></span>
         </div>
       </section>
-      <section></section>
+      <section id="faqs" class="text-white bg-grey">
+        <div class="section-header">
+          <div class="section-title">
+            <span class="section-marker">></span>
+            <span class="section-description">FAQS</span>
+          </div>
+          <div class="section-dots">
+            <div class="bg-white"></div>
+            <div class="bg-light-grey"></div>
+            <div class="bg-green"></div>
+          </div>
+        </div>
+        <div class="faq-content flex flex-col">
+          <div class="bg-dark-grey">
+            <span class="text-green">> </span>What is the difference between the
+            FSW bootcamp & the FCS Program?
+          </div>
+          <div class="bg-dark-grey"><span class="text-green">> </span></div>
+          <div class="bg-dark-grey"><span class="text-green">> </span></div>
+          <div class="bg-dark-grey"><span class="text-green"></span></div>
+        </div>
+      </section>
       <section></section>
       <section></section>
     </main>
