finished faqs section

--- a/index.html
+++ b/index.html
@@ -323,10 +323,15 @@
             <span class="text-green">> </span>What is the difference between the
             FSW bootcamp & the FCS Program?
           </div>
-          <div class="bg-dark-grey"><span class="text-green">> </span></div>
-          <div class="bg-dark-grey"><span class="text-green">> </span></div>
-          <div class="bg-dark-grey"><span class="text-green"></span></div>
+          <div class="bg-dark-grey">
+            <span class="text-green">> </span>Where do I apply?
+          </div>
+          <div class="bg-dark-grey">
+            <span class="text-green">> </span>What programs do you offer?
+          </div>
         </div>
+
+        <a class="bg-dark-grey text-white">VIEW ALL ></a>
       </section>
       <section></section>
       <section></section>
