started with Contact us section, addeed some utility classes

--- a/index.html
+++ b/index.html
@@ -333,7 +333,42 @@
 
         <a class="bg-dark-grey text-white">VIEW ALL ></a>
       </section>
-      <section></section>
+      <section id="contact-us" class="bg-green flex flex-col">
+        <div class="section-header">
+          <div class="section-title bg-dark-grey">
+            <span class="section-marker">></span>
+            <span class="section-description text-white">Contact us</span>
+          </div>
+          <div class="section-dots">
+            <div class="bg-white"></div>
+            <div class="bg-light-grey"></div>
+            <div class="bg-grey"></div>
+          </div>
+        </div>
+        <div class="contact-info flex">
+          <div class="directions flex flex-col bg-dark-grey border-20">
+            <span class="text-light-grey">> Get directions</span>
+            <div class="map border-20">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3311.943109144391!2d35.505992000000006!3d33.891119!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151f16e218dcdc01%3A0x161ad8bc1a3df237!2sSE%20Factory!5e0!3m2!1sen!2sus!4v1688909119579!5m2!1sen!2sus"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+            <div>
+              <span class="text-white"> // SE Factory</span>
+              <p class="text-light-grey">
+                Beirut Digital District BDD 1243 Basement (Floor -1)
+              </p>
+            </div>
+          </div>
+          <div class="form"></div>
+        </div>
+      </section>
       <section></section>
     </main>
     <footer></footer>
