added map section and form section, also added some utility classes

--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
             <div class="map border-20">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3311.943109144391!2d35.505992000000006!3d33.891119!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151f16e218dcdc01%3A0x161ad8bc1a3df237!2sSE%20Factory!5e0!3m2!1sen!2sus!4v1688909119579!5m2!1sen!2sus"
-                width="600"
-                height="450"
+                width="240"
+                height="240"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
@@ -362,11 +362,35 @@
             <div>
               <span class="text-white"> // SE Factory</span>
               <p class="text-light-grey">
-                Beirut Digital District BDD 1243 Basement (Floor -1)
+                Beirut Digital District <br />
+                BDD 1243 <br />
+                1243 Basement (Floor -1)
               </p>
             </div>
           </div>
-          <div class="form"></div>
+          <div class="contact-form flex gap-20">
+            <div class="form-top flex flex-col">
+              <div class="flex flex-col">
+                <label for="">// First Name</label>
+                <input type="text" placeholder="First Name" />
+              </div>
+              <div class="flex flex-col">
+                <label for="">// Last Name</label>
+                <input type="text" placeholder="Last Name" />
+              </div>
+            </div>
+
+            <div class="form-bottom">
+              <div class="flex flex-col">
+                <label for="">// Email</label>
+                <input type="text" placeholder="Email" />
+              </div>
+              <div class="flex flex-col">
+                <label for="">// Password</label>
+                <input type="text" placeholder="Password" />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section></section>
