--- a/index.html
+++ b/index.html
@@ -475,15 +475,32 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="flex flex-col">
-          <div class="subscribe-text text-white">
-            Subscribe to our
-            <span class="text-green"></span>
+      <section id="newsletter" class="bg-grey">
+        <div class="flex justify-between">
+          <div class="flex flex-col">
+            <div class="subscribe-text text-white font-22">
+              Subscribe to our
+              <span class="text-green"> newsletter</span>
+            </div>
+            <span class="text-medium-grey font-14 weight-400"
+              >and stay up-to-date with our latest news.</span
+            >
+          </div>
+          <div class="flex">
+            <input
+              class="font-14"
+              placeholder="Enter your email"
+              type="email"
+            />
+            <button class="bg-dark-grey text-white weight-800">
+              SUBSCRIBE
+            </button>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="flex flex-col"></div>
+    </footer>
   </body>
 </html>
