finished footer section left

--- a/index.html
+++ b/index.html
@@ -499,8 +499,32 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="flex flex-col"></div>
+    <footer class="bg-dark-grey">
+      <div class="flex">
+        <div class="flex gap-60">
+          <div class="flex flex-col gap-9 font-14 weight-900">
+            <a id="se-footer" href="" class="text-light-grey">SE FACTORY</a>
+            <a href="" class="text-medium-grey">Home</a>
+            <a href="" class="text-medium-grey">Hello world!</a>
+            <a href="" class="text-medium-grey">Milestones</a>
+            <a href="" class="text-medium-grey">Programs</a>
+            <a href="" class="text-medium-grey">Hire Talent</a>
+          </div>
+          <div class="flex flex-col justify-end gap-9 font-14 weight-900">
+            <a href="" class="text-medium-grey">FAQs</a>
+            <a href="" class="text-medium-grey">Testimonials</a>
+            <a href="" class="text-medium-grey">Contact us</a>
+            <a href="" class="text-medium-grey">Partners</a>
+          </div>
+          <div class="flex flex-col"></div>
+        </div>
+        <div class="flex">
+          <img src="" alt="" />
+          <div class="flex">
+            <div><img src="" alt="" /></div>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
