--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       </section>
     </main>
     <footer class="bg-dark-grey">
-      <div class="flex">
+      <div class="flex justify-between">
         <div class="flex gap-60">
           <div class="flex flex-col gap-9 font-14 weight-900">
             <a id="se-footer" href="" class="text-light-grey">SE FACTORY</a>
@@ -516,14 +516,74 @@
             <a href="" class="text-medium-grey">Contact us</a>
             <a href="" class="text-medium-grey">Partners</a>
           </div>
-          <div class="flex flex-col"></div>
+          <div class="flex flex-col gap-60"></div>
         </div>
-        <div class="flex">
-          <img src="" alt="" />
-          <div class="flex">
-            <div><img src="" alt="" /></div>
+        <div class="flex flex-col items-end">
+          <img src="src/images/se-square.svg" width="100" alt="SE-LOGO" />
+          <div class="flex grow items-end">
+            <div class="flex gap-10">
+              <div
+                class="footer-img bg-medium-grey flex items-center justify-center br-10"
+              >
+                <img
+                  width="24px"
+                  height="24px"
+                  src="src/images/social-media/linkedIn.svg"
+                  alt="LinkedIn"
+                  width="24px"
+                  height="24px"
+                />
+              </div>
+              <div
+                class="footer-img bg-medium-grey flex items-center justify-center br-10"
+              >
+                <img
+                  width="24px"
+                  height="24px"
+                  src="src/images/social-media/Instagram.svg"
+                  alt="Instagram"
+                  width="24px"
+                  height="24px"
+                />
+              </div>
+
+              <div
+                class="footer-img bg-medium-grey flex items-center justify-center br-10"
+              >
+                <img
+                  src="src/images/social-media/twitter.svg"
+                  alt="Twitter"
+                  width="24px"
+                  height="24px"
+                />
+              </div>
+              <div
+                class="footer-img bg-medium-grey flex items-center justify-center br-10"
+              >
+                <img
+                  src="src/images/social-media/yt.svg"
+                  alt="Youtube"
+                  width="24px"
+                  height="24px"
+                />
+              </div>
+              <div
+                class="footer-img bg-medium-grey flex items-center justify-center br-10"
+              >
+                <img
+                  src="src/images/social-media/facebook.svg"
+                  alt="Facebook"
+                  width="24px"
+                  height="24px"
+                />
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+      <div id="privacy" class="flex justify-between font-12 text-medium-grey">
+        <span>© 2023 SE Factory SAL. All rights reserved.</span>
+        <span>Privacy policy</span>
       </div>
     </footer>
   </body>
