fixed some color issues regarding section headers and dots

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 
       <section id="hello-world">
         <div class="section-header">
-          <div class="section-title">
+          <div class="section-title text-grey">
             <span class="section-marker">></span>
             <span class="section-description">Hello world!</span>
           </div>
           <div class="section-dots">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="bg-grey"></div>
+            <div class="bg-light-grey"></div>
+            <div class="bg-green"></div>
           </div>
         </div>
         <div class="yt-video">
@@ -93,14 +93,14 @@
       </section>
       <section id="milestones">
         <div class="section-header">
-          <div class="section-title">
+          <div class="section-title text-grey">
             <span class="section-marker">></span>
             <span class="section-description">Milestones</span>
           </div>
           <div class="section-dots">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="bg-grey"></div>
+            <div class="bg-light-grey"></div>
+            <div class="bg-green"></div>
           </div>
         </div>
         <div class="milestones-container">
@@ -211,9 +211,9 @@
             <span class="section-description">Hire talent</span>
           </div>
           <div class="section-dots">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="bg-white"></div>
+            <div class="bg-medium-grey"></div>
+            <div class="bg-green"></div>
           </div>
         </div>
         <div class="hire-content">
@@ -256,14 +256,14 @@
       </section>
       <section id="testimonials">
         <div class="section-header">
-          <div class="section-title">
+          <div class="section-title text-dark-grey">
             <span class="section-marker">></span>
             <span class="section-description">Testimonials</span>
           </div>
           <div class="section-dots">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="bg-grey"></div>
+            <div class="bg-light-grey"></div>
+            <div class="bg-green"></div>
           </div>
         </div>
         <div class="testimonials-content">
@@ -314,7 +314,7 @@
           </div>
           <div class="section-dots">
             <div class="bg-white"></div>
-            <div class="bg-light-grey"></div>
+            <div class="bg-medium-grey"></div>
             <div class="bg-green"></div>
           </div>
         </div>
@@ -341,7 +341,7 @@
           </div>
           <div class="section-dots">
             <div class="bg-white"></div>
-            <div class="bg-light-grey"></div>
+            <div class="bg-medium-grey"></div>
             <div class="bg-grey"></div>
           </div>
         </div>
@@ -353,13 +353,13 @@
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3311.943109144391!2d35.505992000000006!3d33.891119!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151f16e218dcdc01%3A0x161ad8bc1a3df237!2sSE%20Factory!5e0!3m2!1sen!2sus!4v1688909119579!5m2!1sen!2sus"
                 width="240"
                 height="240"
-                style="border: 0"
+                style="border: 0; border-radius: 20px"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
             </div>
-            <div class="directions-info">
+            <div class="directions-info grow flex flex-col justify-end">
               <span class="text-white"> // SE Factory</span>
               <p class="text-light-grey weight-400">
                 Beirut Digital District <br />
