--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <span>WANT TO BECOME A</span>
               <div class="hero-animated-text">
                 <span>SOFTWARE ENGINEER?</span>
-                <span>_</span>
+                <span id="flicker">_</span>
               </div>
               <p class="hero-description">
                 Jumpstart your journey in tech with our courses in Computer
@@ -47,7 +47,9 @@
                 Design. Get hands-on experience and gain essential skills for a
                 successful tech career.
               </p>
-              <button class="hero-left-button util-button">#GET TRAINED</button>
+              <button class="hero-left-button util-button">
+                <a href="#programs"> #GET TRAINED </a>
+              </button>
             </div>
           </div>
           <div class="hero-right">
@@ -63,7 +65,9 @@
                 trained and skilled developers who are ready to hit the ground
                 running and drive your success.
               </p>
-              <button class="hero-left-button util-button">#HIRE_TALENT</button>
+              <button class="hero-left-button util-button">
+                <a href="#hire-talent"> #HIRE_TALENT </a>
+              </button>
             </div>
           </div>
         </div>
@@ -245,12 +249,14 @@
                 Look no further than SE Factory!
               </p>
             </div>
-            <a href="#">CONTACT US ></a>
+            <a href="#contact-us">CONTACT US ></a>
           </div>
           <div class="hire-bottom">
             <span>Want to launch a local team?</span>
             <span> check out </span>
-            <img src="src/images/hr-factory.svg" alt="HR Factory" />
+            <a class="bg-dark-grey" href="https://www.hrfactory.io/">
+              <img src="src/images/hr-factory.svg" alt="HR Factory" />
+            </a>
           </div>
         </div>
       </section>
@@ -504,17 +510,17 @@
         <div class="flex gap-60">
           <div class="flex flex-col gap-9 font-14 weight-900">
             <a id="se-footer" href="" class="text-light-grey">SE FACTORY</a>
-            <a href="" class="text-medium-grey">Home</a>
-            <a href="" class="text-medium-grey">Hello world!</a>
-            <a href="" class="text-medium-grey">Milestones</a>
-            <a href="" class="text-medium-grey">Programs</a>
-            <a href="" class="text-medium-grey">Hire Talent</a>
+            <a href="#hero" class="text-medium-grey">Home</a>
+            <a href="#hello-world" class="text-medium-grey">Hello world!</a>
+            <a href="#milestones" class="text-medium-grey">Milestones</a>
+            <a href="#programs" class="text-medium-grey">Programs</a>
+            <a href="#hire-talent" class="text-medium-grey">Hire Talent</a>
           </div>
           <div class="flex flex-col justify-end gap-9 font-14 weight-900">
-            <a href="" class="text-medium-grey">FAQs</a>
-            <a href="" class="text-medium-grey">Testimonials</a>
-            <a href="" class="text-medium-grey">Contact us</a>
-            <a href="" class="text-medium-grey">Partners</a>
+            <a href="#faqs" class="text-medium-grey">FAQs</a>
+            <a href="#testimonials" class="text-medium-grey">Testimonials</a>
+            <a href="#contact" class="text-medium-grey">Contact us</a>
+            <a href="#" class="text-medium-grey">Partners</a>
           </div>
           <div class="flex flex-col gap-60"></div>
         </div>
