fixed milestone container, justify-center

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="bg-green"></div>
           </div>
         </div>
-        <div class="milestones-container">
+        <div class="milestones-container justify-center">
           <div class="milestones-left employment">
             <span> 90%</span>
             <span>employment success rate</span>
